[package]
name = "stream_generator"
version = "0.1.0"
edition = "2018"

authors = ["Pavel Strakhov <ri@idzaaus.org>"]
license = "MIT OR Apache-2.0"
description = "Allows to easily generate streams with async/await"
repository = "https://github.com/Riateche/stream_generator"
categories = ["asynchronous"]

[dependencies]
futures = { version = "0.3.5", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "0.2.21", features = ["macros", "rt-core", "sync"] }
